--- a/XamarinPedidosApp/XamarinPedidosApp/XamarinPedidosApp/XamarinPedidosApp.csproj
+++ b/XamarinPedidosApp/XamarinPedidosApp/XamarinPedidosApp/XamarinPedidosApp.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\XPABusiness\XPABusiness.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Detalhes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
